--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.1.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.30.0",
     "jquery": "^3.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
